@@ -7938,7 +7938,7 @@
   </element>
   <element>
     <fullpath>showthumb.php</fullpath>
-    <version>1.6.03</version>
+    <version>1.6.06</version>
     <status>mandatory</status>
     <permission>read</permission>
     <hash>2aabe606109bec8f698ed3fcd22659ae</hash>
